
2.6 (unreleased)
----------------

Please note:

1. Photologue now relies on Pillow instead of PIL. The easiest way to upgrade is
to remove PIL completely, then install the new version of Photologue.
2. Photologue, in line with Django itself, has dropped support for Django 1.3.

List of changes:

- Switched from PIL to Pillow - hopefully this should make installation easier.
- Allow editing of Photo added date (temp way of sorting photos).
- Added an example project to help people wanting to contribute to the project.
- Fixed buggy Travis CI script.
- fixed issue #52, transactions in migration
- fixed issue #51, uniqueness collisions in migration
- Initial setup of data: removed plinit and replaced it with a South data migration.
- Accessing the root url (usually /photologue/ will now redirect you to the gallery list view.

2.5 (2012-12-13)
----------------

- added a sitemap.xml.
- added some templatetags.
- started using Sphinx for managing documentation.
- started using Transifex for managing translations.
- started using Travis CI.
- added 12 new translations and improved some of the existing translations.
- fixed issue #29 (quote URL of resized image properly).
- misc improvements to clarity of unit tests.
- added Django 1.4 timezone support.

2.4 (2012-08-13)
----------------

Please note:

1. Starting with this version, Photologue uses South to manage the database schema.
If you are upgrading an existing Photologue installation, please follow the
South instructions at: http://south.readthedocs.org/en/latest/convertinganapp.html#converting-other-installations-and-servers

2. Photologue has dropped support for Django 1.2.

List of changes:

- use South to manage schema changes.
- updated installation instructions.
- fixed issue #9 (In Django 1.3, FileField no longer deletes files).
- switched from function-based generic views to class-based views.
- fixed PendingDeprecationWarnings seen when running Django 1.3 - this will make
  the move to Django 1.5 easier.