@@ -1,1 +1,3 @@
+import os
 
+PHOTOLOGUE_TEMPLATE_DIR = os.path.dirname(os.path.abspath(__file__))
