@@ -13,7 +13,7 @@
         <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
         {% for photo in gallery.sample %}
         <div class="gallery-photo">
-            <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a>
+            <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" class="{% block gallery-photo-class %}{% endblock %}" alt="{{ photo.title }}"/></a>
         </div>
         {% endfor %}
     </div>
